# intel-gpu-tools

./: Android.mk  MAINTAINERS  NEWS  autogen.sh  configure.ac
assembler/: Makefile.am  gram.y
assembler/test/: run-test.sh
benchmarks/: .gitignore  Android.mk  Makefile.am  Makefile.sources  gem_blt.c  gem_busy.c  gem_create.c  gem_exec_ctx.c  gem_exec_fault.c  gem_exec_nop.c  gem_latency.c  prime_lookup.c
benchmarks/ezbench.d/: gem_blt.test  gem_busy.test  gem_create.test  gem_exec_nop.test
debugger/: Makefile.am  eudb.c
demos/: Android.mk  Makefile.am  Makefile.sources  intel_sprite_on.c
docs/reference/intel-gpu-tools/: intel-gpu-tools-docs.xml
lib/: Android.mk  Makefile.am  Makefile.sources  drmtest.c  drmtest.h  igt_aux.c  igt_aux.h  igt_core.c  igt_core.h  igt_debugfs.c  igt_debugfs.h  igt_draw.c  igt_fb.c  igt_fb.h  igt_gt.c  igt_gt.h  igt_gvt.c  igt_kms.c  igt_kms.h  igt_pm.c  igt_pm.h  igt_primes.c  igt_rand.c  igt_rand.h  igt_sysfs.c  igt_sysfs.h  igt_vc4.c  igt_vgem.c  igt_vgem.h  igt_x86.c  igt_x86.h  intel_chipset.c  intel_chipset.h  intel_device_info.c  intel_os.c  intel_reg.h  intel_workaround.h  ioctl_wrappers.c  ioctl_wrappers.h  rendercopy_gen8.c  (+1 more)
lib/stubs/drm/: README  intel_bufmgr.c
lib/tests/: Android.mk  Makefile.am  Makefile.sources  igt_command_line.sh
man/: intel_bios_reader.rst
overlay/: Makefile.am  igfx.c  overlay.c
tests/: Android.mk  Makefile.am  Makefile.sources  ZZ_hangman  core_prop_blob.c  debugfs_reader  debugfs_wedged  drm_getopt.sh  drm_lib.sh  drv_hangman.c  drv_missed_irq.c  drv_module_reload_basic  drv_suspend.c  drv_workarounds.c  eviction_common.c  gem_busy.c  gem_close_race.c  gem_concurrent_all.c  gem_context_storedw_loop_render.c  gem_ctx_bad_exec.c  gem_ctx_create.c  gem_ctx_exec.c  gem_ctx_param.c  gem_ctx_switch.c  gem_ctx_thrash.c  gem_eio.c  gem_evict_everything.c  gem_exec_async.c  gem_exec_basic.c  gem_exec_big.c  gem_exec_create.c  gem_exec_fence.c  gem_exec_flush.c  gem_exec_gttfill.c  gem_exec_latency.c  gem_exec_loop.c  gem_exec_nop.c  gem_exec_parallel.c  gem_exec_parse.c  gem_exec_reloc.c  (+71 more)
tests/intel-ci/: README  fast-feedback.testlist
tools/: .gitignore  Android.mk  Makefile.am  Makefile.sources  aubdump.c  intel_aubdump.in  intel_audio_dump.c  intel_bios.h  intel_bios_reader.c  intel_error_decode.c  intel_guc_logger.c  intel_l3_parity.c  intel_reg.c  intel_reg_decode.c  intel_watermark.c
